Update default calendar colors
By default, GNOME Calendar comes with two calendars, both of which come with colors that aren't part of our color palette. "Personal" in particular uses a very washed out blue, which doesn't fit in at all with the rest of our UI.
I was told these colors are coming from e-d-s, so I'm filing the issue here. If that's not the case, feel free to move it elsewhere :)