I#494 - Update default calendar colors

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/494